--- a/imdb/src/App.css
+++ b/imdb/src/App.css
@@ -3,7 +3,11 @@
 }
 
 .navigation-bar {
-
-  display: flex ;
+  display: flex;
   justify-content: space-around;
+  list-style-type: none;
+  background-color: darkgray;
+  padding: 10px;
+  margin: 0px;
+  color: white;
 }
