--- a/imdb/src/components/card/favorites.css
+++ b/imdb/src/components/card/favorites.css
@@ -2,5 +2,14 @@
 {
     display:flex;
     justify-content: space-evenly;
-    padding-top: 15px;
+    padding: 15px;
+    background-color: black;
+    color:white;
+    margin-top: 10px;
+}
+
+.cards
+{
+    background-color: grey;
+    text-align: center;
 }
